--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -3,35 +3,37 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
     <ui:composition template="templates/template.xhtml">
         <ui:param name="pageName" value="Index" />
 
         <!-- Override Content -->
         <ui:define name="content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h2>Login</h2>
-                        <div class="input-group form-control-spacing">
-                            <div class="input-group-addon input-addon-fixedwidth">Username</div>
-                            <input type="text" id="usernameInput" value="#{loginBean.username}" class="form-control" placeholder="Enter your username" />
-                        </div>
+            <h:form>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h2>Login</h2>
+                            <div class="input-group form-control-spacing">
+                                <div class="input-group-addon input-addon-fixedwidth">Username</div>
+                                <h:inputText id="usernameInput" value="#{loginBean.username}" styleClass="form-control" pt:placeholder="Enter your username" />
+                            </div>
 
-                        <div class="input-group form-control-spacing">
-                            <div class="input-group-addon input-addon-fixedwidth">Password</div>
-                            <input type="password" id="passwordInput" value="#{loginBean.password}" class="form-control" placeholder="Enter your password" />
+                            <div class="input-group form-control-spacing">
+                                <div class="input-group-addon input-addon-fixedwidth">Password</div>
+                                <h:inputSecret id="passwordInput" value="#{loginBean.password}" styleClass="form-control" pt:placeholder="Enter your password" />
+                            </div>
+                            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
+                            <p:commandButton value="Login" id="ajax" actionListener="#{loginBean.login}" styleClass="btn btn-success" ></p:commandButton>
                         </div>
-                        <h:commandButton value="Login" id="ajax" action="dashboard" styleClass="btn btn-success" ></h:commandButton>
                     </div>
                 </div>
-            </div>
+            </h:form>
         </ui:define>
 
     </ui:composition>
+    
 </html>
-
