--- a/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
@@ -16,7 +16,11 @@
         <ui:define name="content">
             <div class="container">
                 <h2>About  Merlion Portal</h2>
-                <div>blah blah blah</div>
+                <h4>Our Mission</h4>
+                <div>To provide professional service and smoothen your business process</div>
+                <h4>Our Vission</h4>
+                <div>Be the world leader in logistic services, you need it, we provide it!</div>
+                <div>MerLION provides you with all the logistic services you need!</div>
             </div>
         </ui:define>
 
