--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -10,7 +10,11 @@
         <title>Home Page</title>
     </h:head>
     <h:body>
-        Hello!
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="${root}/viewallproducts.xhtml">View Products</a></li>
+            <li><a href="${root}/administration.xhtml">View Subscribers</a></li>
+        </ul>
+
     </h:body>
 </html>
 
