--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -8,7 +8,7 @@
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
     <ui:composition template="templates/template.xhtml">
-        <ui:param name="pageName" value="Index" />
+        <ui:param name="pageName" value="resetpassword" />
 
         <!-- Override Content -->
         <ui:define name="content">
