View Company - Manli

--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -18,7 +18,7 @@
                     <h2>Create New User</h2>
 
                     <p:panel header="Create User" style="margin-bottom:10px;" >
-                        <c:if test ="#{dashboardBean.loginedUser.userType == 'superuser'}">
+                        <c:if test ="#{createUserManagerBean.loginedUser.userType == 'superuser'}">
 
                             <h:panelGrid columns="1" cellpadding="5">
                                 <p:outputLabel for="company" value="Company:  " />
